Add basic elements to sidebar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello World!</h1>
+  <div class="wrapper">
+    <div class="sidebar">
+      <div class="logo">Dashboard</div>
+      <div class="main-links">
+        <ul>
+          <li>Home</li>
+          <li>Profile</li>
+          <li>Messages</li>
+          <li>History</li>
+          <li>Taasks</li>
+          <li>Communities</li>
+        </ul>
+      </div>
+      <div class="extra-links">
+        <ul>
+          <li>Settings</li>
+          <li>Support</li>
+          <li>Privacy</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
