Add basic styling to sidebar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li>Profile</li>
           <li>Messages</li>
           <li>History</li>
-          <li>Taasks</li>
+          <li>Tasks</li>
           <li>Communities</li>
         </ul>
       </div>
