--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="wrapper">
     <div class="sidebar">
-      <div class="logo">Dashboard</div>
+      <div class="logo"><img src="images/view-dashboard.svg" alt="Dashboard Icon">Dashboard</div>
       <div class="main-links">
         <ul>
           <li>Home</li>
