--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body>
   <div class="wrapper">
     <div class="sidebar">
-      <div class="logo"><img src="images/view-dashboard.svg" alt="Dashboard Icon">Dashboard</div>
+      <div class="logo"><img class="icon" src="images/dashboard.svg" alt="Dashboard Icon">Dashboard</div>
       <div class="main-links">
         <ul>
-          <li>Home</li>
-          <li>Profile</li>
-          <li>Messages</li>
-          <li>History</li>
-          <li>Tasks</li>
-          <li>Communities</li>
+          <li><img class="icon" src="images/home.svg" alt="Home Icon">Home</li>
+          <li><img class="icon" src="images/profile.svg" alt="Profile Icon">Profile</li>
+          <li><img class="icon" src="images/messages.svg" alt="Messages Icon">Messages</li>
+          <li><img class="icon" src="images/history.svg" alt="History Icon">History</li>
+          <li><img class="icon" src="images/tasks.svg" alt="Tasks Icon">Tasks</li>
+          <li><img class="icon" src="images/communities.svg" alt="Communities Icon">Communities</li>
         </ul>
       </div>
       <div class="extra-links">
         <ul>
-          <li>Settings</li>
-          <li>Support</li>
-          <li>Privacy</li>
+          <li><img class="icon" src="images/settings.svg" alt="Settings Icon">Settings</li>
+          <li><img class="icon" src="images/support.svg" alt="Support Icon">Support</li>
+          <li><img class="icon" src="images/privacy.svg" alt="Privacy Icon">Privacy</li>
         </ul>
       </div>
     </div>
