Add specific classes to sidebar items

--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
       <img class="large-icon" src="images/dashboard.svg" alt="Dashboard Icon"><div class="logo-text">Dashboard</div>
       <div class="main-links">
         <ul>
-          <a href=""><img class="icon" src="images/home.svg" alt="Home Icon"></a>
-          <a href=""><li class="sb-element">Home</li></a>
-          <a href=""><img class="icon" src="images/profile.svg" alt="Profile Icon"></a>
-          <a href=""><li class="sb-element">Profile</li></a>
-          <a href=""><img class="icon" src="images/messages.svg" alt="Messages Icon"></a>
-          <a href=""><li class="sb-element">Messages</li></a>
-          <a href=""><img class="icon" src="images/history.svg" alt="History Icon"></a>
-          <a href=""><li class="sb-element">History</li></a>
-          <a href=""><img class="icon" src="images/tasks.svg" alt="Tasks Icon"></a>
-          <a href=""><li class="sb-element">Tasks</li></a>
-          <a href=""><img class="icon" src="images/communities.svg" alt="Communities Icon"></a>
-          <a href=""><li class="sb-element">Communities</li></a>
+          <a href=""><img class="icon home" src="images/home.svg" alt="Home Icon"></a>
+          <a href=""><li class="sb-element home">Home</li></a>
+          <a href=""><img class="icon profile" src="images/profile.svg" alt="Profile Icon"></a>
+          <a href=""><li class="sb-element profile">Profile</li></a>
+          <a href=""><img class="icon messages" src="images/messages.svg" alt="Messages Icon"></a>
+          <a href=""><li class="sb-element messages">Messages</li></a>
+          <a href=""><img class="icon history" src="images/history.svg" alt="History Icon"></a>
+          <a href=""><li class="sb-element history">History</li></a>
+          <a href=""><img class="icon tasks" src="images/tasks.svg" alt="Tasks Icon"></a>
+          <a href=""><li class="sb-element tasks">Tasks</li></a>
+          <a href=""><img class="icon communities" src="images/communities.svg" alt="Communities Icon"></a>
+          <a href=""><li class="sb-element communities">Communities</li></a>
         </ul>
       </div>
       <div class="extra-links">
         <ul>
-          <a href=""><img class="icon" src="images/settings.svg" alt="Settings Icon"></a>
-          <a href=""><li class="sb-element">Settings</li></a>
-          <a href=""><img class="icon" src="images/support.svg" alt="Support Icon"></a>
-          <a href=""><li class="sb-element">Support</li></a>
-          <a href=""><img class="icon" src="images/privacy.svg" alt="Privacy Icon"></a>
-          <a href=""><li class="sb-element">Privacy</li></a>
+          <a href=""><img class="icon settings" src="images/settings.svg" alt="Settings Icon"></a>
+          <a href=""><li class="sb-element settings">Settings</li></a>
+          <a href=""><img class="icon support" src="images/support.svg" alt="Support Icon"></a>
+          <a href=""><li class="sb-element support">Support</li></a>
+          <a href=""><img class="icon privacy" src="images/privacy.svg" alt="Privacy Icon"></a>
+          <a href=""><li class="sb-element privacy">Privacy</li></a>
         </ul>
       </div>
     </div>
