Change col dimensions of sidebar

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
   <div class="wrapper">
     <div class="sidebar">
-      <img class="large-icon" src="images/dashboard.svg" alt="Dashboard Icon"><div class="logo-text">Dashboard</div>
+      <a href=""><img class="large-icon" src="images/dashboard.svg" alt="Dashboard Icon"></a>
+      <a href=""><div class="logo-text">Dashboard</div></a>
       <div class="main-links">
         <ul>
           <a href=""><img class="icon home" src="images/home.svg" alt="Home Icon"></a>
