--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
         </ul>
       </div>
     </div>
+    <div class="header">
+      <div class="search-bar">search bar</div>
+      <div class="profile">profile</div>
+      <div class="welcome">welcome</div>
+      <div class="buttons">buttons</div>
+    </div>
   </div>
 </body>
 </html>
