Complete search bar

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
       </div>
     </div>
     <div class="header">
-      <div class="search-bar">search bar</div>
+      <div class="search-bar">
+        <img class="icon search" src="images/search.svg" alt="Search Icon">
+        <textarea></textarea>
+      </div>
       <div class="profile">profile</div>
       <div class="welcome">welcome</div>
       <div class="buttons">buttons</div>
