Add profile menu section

--- a/index.html
+++ b/index.html
@@ -45,9 +45,13 @@
     <div class="header">
       <div class="search-bar">
         <img class="icon search" src="images/search.svg" alt="Search Icon">
-        <textarea></textarea>
+        <input></input>
       </div>
-      <div class="profile">profile</div>
+      <div class="profile-menu">
+        <img class="notification" src="images/notification.svg" alt="Notification Icon">
+        <img class="profile-picture" src="images/beaver.png" alt="">
+        <div class="user-name">Thomas Yeoh</div>
+      </div>
       <div class="welcome">welcome</div>
       <div class="buttons">buttons</div>
     </div>
