--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <div class="welcome">welcome</div>
       <div class="buttons">buttons</div>
     </div>
+    <div class="main-section"></div>
   </div>
 </body>
 </html>
