Complete welcome message

--- a/index.html
+++ b/index.html
@@ -49,10 +49,16 @@
       </div>
       <div class="profile-menu">
         <img class="notification" src="images/notification.svg" alt="Notification Icon">
-        <img class="profile-picture" src="images/beaver.png" alt="">
+        <img class="profile-picture" src="images/beaver.png" alt="Profile Picture">
         <div class="user-name">Thomas Yeoh</div>
       </div>
-      <div class="welcome">welcome</div>
+      <div class="welcome">
+        <img class="profile-picture" src="images/beaver.png" alt="Profile Picture">
+        <div class="welcome-text">
+          <h3>Hi there,</h3>
+          <h1>Thomas Yeoh (@chckn9)</h1>
+        </div>
+      </div>
       <div class="buttons">buttons</div>
     </div>
     <div class="main-section"></div>
