Finish buttons section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
           <h1>Thomas Yeoh (@chckn9)</h1>
         </div>
       </div>
-      <div class="buttons">buttons</div>
+      <div class="buttons">
+        <button>New</button>
+        <button>Upload</button>
+        <button>Share</button>
+      </div>
     </div>
     <div class="main-section"></div>
   </div>
