Add two main columns for main-section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
         <button>Share</button>
       </div>
     </div>
-    <div class="main-section"></div>
+    <div class="main-section">
+      <div class="projects-section"></div>
+      <div class="side-section"></div>
+    </div>
   </div>
 </body>
 </html>
