--- a/index.html
+++ b/index.html
@@ -66,8 +66,18 @@
       </div>
     </div>
     <div class="main-section">
-      <div class="projects-section"></div>
-      <div class="side-section"></div>
+      <div class="projects-section">
+        <h2>Your Projects</h2>
+          <div class="project">1</div>
+          <div class="project">2</div>
+          <div class="project">3</div>
+          <div class="project">4</div>
+          <div class="project">5</div>
+          <div class="project">6</div>
+      </div>
+      <div class="side-section">
+        <h2>Announcements</h2>
+      </div>
     </div>
   </div>
 </body>
