Add some dummy content

--- a/index.html
+++ b/index.html
@@ -68,9 +68,18 @@
     <div class="main-section">
       <div class="projects-section">
         <h2>Your Projects</h2>
-          <div class="project">1</div>
-          <div class="project">2</div>
-          <div class="project">3</div>
+          <div class="project">
+            <h2>Super Cool Project</h2>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et</p>
+          </div>
+          <div class="project">
+            <h2>Not So Cool Project</h2>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab</p>
+          </div>
+          <div class="project">
+            <h2>Sign-Up Form</h2>
+            <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot</p>
+          </div>
           <div class="project">4</div>
           <div class="project">5</div>
           <div class="project">6</div>
