--- a/index.html
+++ b/index.html
@@ -71,14 +71,29 @@
           <div class="project">
             <h2>Super Cool Project</h2>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et</p>
+            <div class="project-actions">
+              <img class="action-icons" src="images/star-plus-outline.svg" alt="Star">
+              <img class="action-icons" src="images/eye-plus-outline.svg" alt="View Later">
+              <img class="action-icons" src="images/share-variant-outline.svg" alt="Share">
+            </div>
           </div>
           <div class="project">
             <h2>Not So Cool Project</h2>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab</p>
+            <div class="project-actions">
+              <img class="action-icons" src="images/star-plus-outline.svg" alt="Star">
+              <img class="action-icons" src="images/eye-plus-outline.svg" alt="View Later">
+              <img class="action-icons" src="images/share-variant-outline.svg" alt="Share">
+            </div>
           </div>
           <div class="project">
             <h2>Sign-Up Form</h2>
             <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot</p>
+            <div class="project-actions">
+              <img class="action-icons" src="images/star-plus-outline.svg" alt="Star">
+              <img class="action-icons" src="images/eye-plus-outline.svg" alt="View Later">
+              <img class="action-icons" src="images/share-variant-outline.svg" alt="Share">
+            </div>
           </div>
           <div class="project">4</div>
           <div class="project">5</div>
