Add more dummy content

--- a/index.html
+++ b/index.html
@@ -95,9 +95,33 @@
               <img class="action-icons" src="images/share-variant-outline.svg" alt="Share">
             </div>
           </div>
-          <div class="project">4</div>
-          <div class="project">5</div>
-          <div class="project">6</div>
+          <div class="project">
+            <h2>Sign-Up Form</h2>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <div class="project-actions">
+              <img class="action-icons" src="images/star-plus-outline.svg" alt="Star">
+              <img class="action-icons" src="images/eye-plus-outline.svg" alt="View Later">
+              <img class="action-icons" src="images/share-variant-outline.svg" alt="Share">
+            </div>
+          </div>
+          <div class="project">
+            <h2>Calculator App</h2>
+            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+            <div class="project-actions">
+              <img class="action-icons" src="images/star-plus-outline.svg" alt="Star">
+              <img class="action-icons" src="images/eye-plus-outline.svg" alt="View Later">
+              <img class="action-icons" src="images/share-variant-outline.svg" alt="Share">
+            </div>
+          </div>
+          <div class="project">
+            <h2>Etch-A-Sketch</h2>
+            <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with</p>
+            <div class="project-actions">
+              <img class="action-icons" src="images/star-plus-outline.svg" alt="Star">
+              <img class="action-icons" src="images/eye-plus-outline.svg" alt="View Later">
+              <img class="action-icons" src="images/share-variant-outline.svg" alt="Share">
+            </div>
+          </div>
       </div>
       <div class="side-section">
         <h2>Announcements</h2>
