--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="main-section">
       <div class="projects-section">
         <h2>Your Projects</h2>
-          <div class="project">
+          <div class="project card">
             <h2>Super Cool Project</h2>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et</p>
             <div class="project-actions">
@@ -77,7 +77,7 @@
               <img class="action-icons" src="images/share-variant-outline.svg" alt="Share">
             </div>
           </div>
-          <div class="project">
+          <div class="project card">
             <h2>Not So Cool Project</h2>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab</p>
             <div class="project-actions">
@@ -86,7 +86,7 @@
               <img class="action-icons" src="images/share-variant-outline.svg" alt="Share">
             </div>
           </div>
-          <div class="project">
+          <div class="project card">
             <h2>Sign-Up Form</h2>
             <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot</p>
             <div class="project-actions">
@@ -95,7 +95,7 @@
               <img class="action-icons" src="images/share-variant-outline.svg" alt="Share">
             </div>
           </div>
-          <div class="project">
+          <div class="project card">
             <h2>Sign-Up Form</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
             <div class="project-actions">
@@ -104,7 +104,7 @@
               <img class="action-icons" src="images/share-variant-outline.svg" alt="Share">
             </div>
           </div>
-          <div class="project">
+          <div class="project card">
             <h2>Calculator App</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
             <div class="project-actions">
@@ -113,7 +113,7 @@
               <img class="action-icons" src="images/share-variant-outline.svg" alt="Share">
             </div>
           </div>
-          <div class="project">
+          <div class="project card">
             <h2>Etch-A-Sketch</h2>
             <p>A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with</p>
             <div class="project-actions">
@@ -124,7 +124,19 @@
           </div>
       </div>
       <div class="side-section">
-        <h2>Announcements</h2>
+        <div class="announcements">
+          <h2>Announcements</h2>
+          <div class="card">
+            <h3>Site Maintenance</h3>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+            <hr>
+            <h3>Community Share Day</h3>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+            <hr>
+            <h3>Updated Privacy Policy</h3>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
